# DRL-Assignment-2

./: .gitignore  2048.cpp  approximator.py  connect6.py  game2048env.py  ntuple_action.py  ntuple_approximator.py  ntuple_run.py  ntuple_train.py  pyproject.toml  student_agent.py  td_mcts_2048.py  td_n_tuple_apx.py
.github/workflows/: main.yml
game/: __init__.py  game2048env.py
