[project]
name = "drl-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dill>=0.3.9",
    "gym>=0.26.2",
    "gymnasium>=1.1.1",
    "ipython>=8.12.3",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
